Fix visibility on white images

--- a/css/main.css
+++ b/css/main.css
@@ -1143,7 +1143,6 @@ ol li {
   bottom: 0;
   font-size: 20px;
   font-size: 2rem;
-  color: #fff;
 }
 
 /* line 81, ../sass/partials/_main-content.sass */
